Mrun no-flow bug removed, 2 mboxes at stage 1.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "ostream": "cpp",
         "iosfwd": "cpp",
         "chrono": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "iostream": "cpp"
     }
 }
